Adding list user

--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,7 +1,8 @@
 <footer>
-  <mat-toolbar>
+  <div>
     <mat-toolbar-row class="center-content">
-      FOOTER INFO
+      <p>Made with 💙 for you, </p>
+      <p>Powered by Igmer Rodriguez</p>
     </mat-toolbar-row>
-  </mat-toolbar>
+  </div>
 </footer>
