--- a/src/app/components/shared/sidenav/sidenav.component.html
+++ b/src/app/components/shared/sidenav/sidenav.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button>
       <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
     </button>
-    Responsive side navigation
+    Auth basic template
   </mat-toolbar-row>
 </mat-toolbar>
 
@@ -14,7 +14,7 @@
       <a mat-list-item routerLink="/home/user/list">Users</a>
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content>
+  <mat-sidenav-content class="container">
     <div style="height: 88vh">
       <router-outlet></router-outlet>
     </div>
