--- a/src/app/components/user/list/list.component.html
+++ b/src/app/components/user/list/list.component.html
@@ -1,1 +1,47 @@
-<p>list works!</p>
+<div class="container">
+    <div class="example-container mat-elevation-z8">
+        <mat-grid-list cols="4" rowHeight="100px">
+            <mat-grid-tile colspan="3">
+                <div class="title">
+                    <p class="mat-card-title">User List</p>
+                </div>
+            </mat-grid-tile>
+            <mat-grid-tile colspan="1">
+                <button mat-raised-button color="primary">Create New</button>
+            </mat-grid-tile>
+        </mat-grid-list>
+        <div class="example-loading-shade"
+             *ngIf="isLoadingResults">
+            <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+        </div>
+        <div class="example-table-container">
+            <mat-form-field>
+                <mat-label>Filter</mat-label>
+                <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
+            </mat-form-field>
+            <table mat-table [dataSource]="dataSource" class="example-table"
+                   matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
+                <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef>ID</th>
+                    <td mat-cell *matCellDef="let row">{{row.id}}</td>
+                </ng-container>
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef>Name</th>
+                    <td mat-cell *matCellDef="let row">{{row.name}}</td>
+                </ng-container>
+                <ng-container matColumnDef="email">
+                    <th mat-header-cell *matHeaderCellDef>Email</th>
+                    <td mat-cell *matCellDef="let row">{{row.email}}</td>
+                </ng-container>
+                <ng-container matColumnDef="username">
+                    <th mat-header-cell *matHeaderCellDef>Username</th>
+                    <td mat-cell *matCellDef="let row">{{row.username}}</td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
+
+        <mat-paginator [pageSizeOptions]="[25,50, 100]" aria-label="Select page of users"></mat-paginator>
+    </div>
+</div>
